Update Banner dan Manifest

--- a/fits_employees_mood/static/description/index.html
+++ b/fits_employees_mood/static/description/index.html
@@ -1,7 +1,7 @@
 <section class="oe_container">
     <div class="oe_row oe_spaced">
         <div class="oe_span12">
-            <h2 class="oe_slogan" style="color:#875A7B;font-weight: 600;text-align: center;width: 100%;">Fits Mood Attendance</h2>
+            <h2 class="oe_slogan" style="color:#875A7B;font-weight: 600;text-align: center;width: 100%;">Mood Presence</h2>
             <h3 class="oe_slogan" style="text-align: center;width: 100%;">Addon ini memungkinkan karyawan melaporkan suasana hati mereka setiap kali melakukan check-in atau check-out, sehingga perusahaan dapat memantau pola kesejahteraan karyawan dan mengambil langkah proaktif untuk meningkatkan produktivitas serta lingkungan kerja yang lebih sehat.</h3>
         </div>
     </div>
